[package]
name = "lazyk-rust"
version = "0.1.0"
authors = ["Dmytro Fedoriaka"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark1"
harness = false