[package]
name = "lazyk-rust"
version = "0.1.0"
authors = ["Dmytro Fedoriaka"]
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
clap = { version = "4.1.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.3"
predicates = "2.1"

[[bench]]
name = "benchmark"
harness = false